--- a/programs/nina/Cargo.toml
+++ b/programs/nina/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nina"
-version = "0.3.2"
+version = "0.3.3"
 description = "Nina - A self-publishing protocol"
 edition = "2018"
 
@@ -14,6 +14,7 @@ no-idl = []
 cpi = ["no-entrypoint"]
 default = ["test"]
 test = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
